--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "firebase-admin": "^11.5.0",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "ethers": "^5.7.2",
+    "protobufjs": "^7.2.4"
   }
 }
