--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,19 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "seed": "node scripts/seedChickens.js",
     "spawn-eggs": "node scripts/spawnEggsOnce.js",
     "fix-feedcount": "node scripts/fixFeedCountFromHistory.js",
     "monthly-lucky-draw": "node scripts/runMonthlyLuckyDraw.js",
-    "export-firestore": "node scripts/exportFirestore.js"
+    "seed:promotions": "node scripts/seedPromotions.js",
+    "export-firestore": "node scripts/exportFirestore.js",
+    "migrate:fs-to-mongo": "node scripts/migrateFirestoreToMongo.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "firebase-admin": "^11.5.0",
+    "mongoose": "^7.6.3",
     "node-cron": "^3.0.0",
     "ethers": "^5.7.2",
     "protobufjs": "^7.2.4"
