--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,13 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.11",
-    "redux": "^4.2.1",
-    "styled-components": "^5.3.11",
-    "redux-thunk": "^2.4.2"
+    "redux": "4.2.1",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +34,8 @@
   },
   "devDependencies": {
     "depcheck": "^1.4.7"
+  },
+  "overrides": {
+    "redux": "4.2.1"
   }
 }
